[gd_scene load_steps=6 format=2]

[ext_resource path="res://buttonUi.png" type="Texture" id=1]
[ext_resource path="res://MainMenu.gd" type="Script" id=2]
[ext_resource path="res://UITheme.tres" type="Theme" id=3]
[ext_resource path="res://Audio/attack.wav" type="AudioStream" id=4]
[ext_resource path="res://bgm.wav" type="AudioStream" id=5]

[node name="StartMenu" type="Control"]
script = ExtResource( 2 )

[node name="MainMenu" type="VBoxContainer" parent="."]
margin_left = 40.0
margin_right = 280.0
margin_bottom = 180.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartButton" type="Button" parent="MainMenu"]
margin_top = 47.0
margin_right = 240.0
margin_bottom = 73.0
theme = ExtResource( 3 )
text = "START GAME"

[node name="SettingsButton" type="Button" parent="MainMenu"]
margin_top = 77.0
margin_right = 240.0
margin_bottom = 103.0
theme = ExtResource( 3 )
text = "SETTINGS"

[node name="QuitButton" type="Button" parent="MainMenu"]
margin_top = 107.0
margin_right = 240.0
margin_bottom = 133.0
theme = ExtResource( 3 )
text = "QUIT"

[node name="SettingsMenu" type="Popup" parent="."]
visible = true
margin_left = 40.0
margin_right = 282.0
margin_bottom = 179.0
popup_exclusive = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect" type="NinePatchRect" parent="SettingsMenu"]
margin_right = 243.0
margin_bottom = 180.0
texture = ExtResource( 1 )
patch_margin_left = 6
patch_margin_top = 6
patch_margin_right = 6
patch_margin_bottom = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="SettingsMenu"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -28.0
margin_top = 9.0
margin_right = 28.0
margin_bottom = 23.0
text = "SETTINGS"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="VBoxContainer" parent="SettingsMenu"]
margin_left = 10.0
margin_top = 34.0
margin_right = 234.0
margin_bottom = 172.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonContainer" type="HBoxContainer" parent="SettingsMenu/Menu"]
margin_right = 224.0
margin_bottom = 26.0
size_flags_vertical = 0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VideoButton" type="Button" parent="SettingsMenu/Menu/ButtonContainer"]
margin_right = 72.0
margin_bottom = 26.0
size_flags_horizontal = 3
theme = ExtResource( 3 )
text = "VIDEO"

[node name="AudioButton" type="Button" parent="SettingsMenu/Menu/ButtonContainer"]
margin_left = 76.0
margin_right = 148.0
margin_bottom = 26.0
size_flags_horizontal = 3
theme = ExtResource( 3 )
text = "AUDIO"

[node name="ControlsButton" type="Button" parent="SettingsMenu/Menu/ButtonContainer"]
margin_left = 152.0
margin_right = 224.0
margin_bottom = 26.0
size_flags_horizontal = 3
theme = ExtResource( 3 )
text = "CONTROLS"

[node name="SettingsContainer" type="VBoxContainer" parent="SettingsMenu/Menu"]
margin_top = 30.0
margin_right = 224.0
margin_bottom = 272.0
size_flags_vertical = 0

[node name="VideoSettings" type="GridContainer" parent="SettingsMenu/Menu/SettingsContainer"]
margin_right = 224.0
margin_bottom = 54.0
columns = 2

[node name="Label2" type="Label" parent="SettingsMenu/Menu/SettingsContainer/VideoSettings"]
margin_top = 5.0
margin_right = 196.0
margin_bottom = 19.0
size_flags_horizontal = 3
text = "Fullscreen"

[node name="FullscreenCheckBox" type="CheckBox" parent="SettingsMenu/Menu/SettingsContainer/VideoSettings"]
margin_left = 200.0
margin_right = 224.0
margin_bottom = 24.0
size_flags_horizontal = 8

[node name="Label3" type="Label" parent="SettingsMenu/Menu/SettingsContainer/VideoSettings"]
visible = false
margin_top = 34.0
margin_right = 173.0
margin_bottom = 48.0
size_flags_horizontal = 3
text = "Resolution"

[node name="VideoOptionsButton" type="OptionButton" parent="SettingsMenu/Menu/SettingsContainer/VideoSettings"]
visible = false
margin_left = 114.0
margin_top = 28.0
margin_right = 224.0
margin_bottom = 54.0
size_flags_horizontal = 3
theme = ExtResource( 3 )
text = "640x360"
items = [ "640x360", null, false, 0, null, "1280x720", null, false, 1, null, "1920x1080", null, false, 2, null ]
selected = 0

[node name="ApplyButton" type="Button" parent="SettingsMenu/Menu/SettingsContainer/VideoSettings"]
margin_top = 28.0
margin_right = 196.0
margin_bottom = 54.0
theme = ExtResource( 3 )
text = "APPLY"

[node name="AudioSettings" type="GridContainer" parent="SettingsMenu/Menu/SettingsContainer"]
margin_top = 58.0
margin_right = 224.0
margin_bottom = 170.0
columns = 4

[node name="Master" type="Label" parent="SettingsMenu/Menu/SettingsContainer/AudioSettings"]
margin_left = 6.0
margin_top = 1.0
margin_right = 50.0
margin_bottom = 15.0
size_flags_horizontal = 6
text = "Master"

[node name="MasterSlider" type="HSlider" parent="SettingsMenu/Menu/SettingsContainer/AudioSettings"]
margin_left = 61.0
margin_right = 118.0
margin_bottom = 16.0
size_flags_horizontal = 3
size_flags_vertical = 6
max_value = 1.0
step = 0.05
value = 1.0

[node name="MasterValue" type="Label" parent="SettingsMenu/Menu/SettingsContainer/AudioSettings"]
margin_left = 122.0
margin_top = 1.0
margin_right = 143.0
margin_bottom = 15.0
size_flags_horizontal = 8
text = "100"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MasterTestButton" type="Label" parent="SettingsMenu/Menu/SettingsContainer/AudioSettings"]
margin_left = 223.0
margin_right = 223.0
margin_bottom = 14.0
size_flags_horizontal = 8
size_flags_vertical = 0
theme = ExtResource( 3 )

[node name="BGM" type="Label" parent="SettingsMenu/Menu/SettingsContainer/AudioSettings"]
margin_left = 17.0
margin_top = 35.0
margin_right = 40.0
margin_bottom = 49.0
size_flags_horizontal = 6
text = "BGM"

[node name="BGMSlider" type="HSlider" parent="SettingsMenu/Menu/SettingsContainer/AudioSettings"]
margin_left = 61.0
margin_top = 34.0
margin_right = 118.0
margin_bottom = 50.0
size_flags_horizontal = 3
size_flags_vertical = 6
max_value = 1.0
step = 0.05
value = 1.0

[node name="BGMValue" type="Label" parent="SettingsMenu/Menu/SettingsContainer/AudioSettings"]
margin_left = 122.0
margin_top = 35.0
margin_right = 143.0
margin_bottom = 49.0
text = "100"

[node name="BGMTestButton" type="CheckButton" parent="SettingsMenu/Menu/SettingsContainer/AudioSettings"]
margin_left = 147.0
margin_top = 20.0
margin_right = 223.0
margin_bottom = 64.0
rect_clip_content = true
size_flags_horizontal = 8
size_flags_vertical = 6
theme = ExtResource( 3 )
flat = true
clip_text = true
align = 1

[node name="BGMAudioStreamPlayer" type="AudioStreamPlayer" parent="SettingsMenu/Menu/SettingsContainer/AudioSettings/BGMTestButton"]
stream = ExtResource( 5 )
bus = "BGM"

[node name="SFX" type="Label" parent="SettingsMenu/Menu/SettingsContainer/AudioSettings"]
margin_left = 17.0
margin_top = 83.0
margin_right = 39.0
margin_bottom = 97.0
size_flags_horizontal = 6
text = "SFX"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SFXSlider" type="HSlider" parent="SettingsMenu/Menu/SettingsContainer/AudioSettings"]
margin_left = 61.0
margin_top = 82.0
margin_right = 118.0
margin_bottom = 98.0
size_flags_horizontal = 3
size_flags_vertical = 6
max_value = 1.0
step = 0.05
value = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SFXValue" type="Label" parent="SettingsMenu/Menu/SettingsContainer/AudioSettings"]
margin_left = 122.0
margin_top = 83.0
margin_right = 143.0
margin_bottom = 97.0
text = "100"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SFXTestButton" type="CheckButton" parent="SettingsMenu/Menu/SettingsContainer/AudioSettings"]
margin_left = 147.0
margin_top = 68.0
margin_right = 223.0
margin_bottom = 112.0
size_flags_horizontal = 8
size_flags_vertical = 4
theme = ExtResource( 3 )
flat = true

[node name="SFXAudioStreamPlayer" type="AudioStreamPlayer" parent="SettingsMenu/Menu/SettingsContainer/AudioSettings/SFXTestButton"]
stream = ExtResource( 4 )
bus = "SFX"

[node name="ControlSettings" type="GridContainer" parent="SettingsMenu/Menu/SettingsContainer"]
margin_top = 174.0
margin_right = 224.0
margin_bottom = 242.0
columns = 2

[node name="MovementLabel" type="Label" parent="SettingsMenu/Menu/SettingsContainer/ControlSettings"]
margin_right = 98.0
margin_bottom = 14.0
size_flags_horizontal = 3
text = "Movement"

[node name="MovementKeysLabel" type="Label" parent="SettingsMenu/Menu/SettingsContainer/ControlSettings"]
margin_left = 102.0
margin_right = 224.0
margin_bottom = 14.0
size_flags_horizontal = 8
text = "W, A, S, D or Arrows"

[node name="AttackLabel" type="Label" parent="SettingsMenu/Menu/SettingsContainer/ControlSettings"]
margin_top = 18.0
margin_right = 98.0
margin_bottom = 32.0
size_flags_horizontal = 3
text = "Attack"

[node name="AttackKeysLabel" type="Label" parent="SettingsMenu/Menu/SettingsContainer/ControlSettings"]
margin_left = 186.0
margin_top = 18.0
margin_right = 224.0
margin_bottom = 32.0
size_flags_horizontal = 8
text = "Z or K"

[node name="RollLabel" type="Label" parent="SettingsMenu/Menu/SettingsContainer/ControlSettings"]
margin_top = 36.0
margin_right = 98.0
margin_bottom = 50.0
size_flags_horizontal = 3
text = "Roll"

[node name="RollKeyLabel" type="Label" parent="SettingsMenu/Menu/SettingsContainer/ControlSettings"]
margin_left = 185.0
margin_top = 36.0
margin_right = 224.0
margin_bottom = 50.0
size_flags_horizontal = 8
text = "X or J"

[node name="PickUpLabel" type="Label" parent="SettingsMenu/Menu/SettingsContainer/ControlSettings"]
margin_top = 54.0
margin_right = 98.0
margin_bottom = 68.0
size_flags_horizontal = 3
text = "Pick Up Item"

[node name="PickUpKeyLabel" type="Label" parent="SettingsMenu/Menu/SettingsContainer/ControlSettings"]
margin_left = 186.0
margin_top = 54.0
margin_right = 224.0
margin_bottom = 68.0
size_flags_horizontal = 8
text = "C or L"

[node name="CloseButton" type="Button" parent="SettingsMenu"]
margin_left = 209.0
margin_top = 6.0
margin_right = 235.0
margin_bottom = 32.0
theme = ExtResource( 3 )
text = "X"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="resolution_changed" from="." to="." method="_on_StartMenu_resolution_changed"]
[connection signal="pressed" from="MainMenu/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="MainMenu/SettingsButton" to="." method="_on_OptionsButton_pressed"]
[connection signal="pressed" from="MainMenu/QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="pressed" from="SettingsMenu/Menu/ButtonContainer/VideoButton" to="." method="_on_VideoButton_pressed"]
[connection signal="pressed" from="SettingsMenu/Menu/ButtonContainer/AudioButton" to="." method="_on_AudioButton_pressed"]
[connection signal="pressed" from="SettingsMenu/Menu/ButtonContainer/ControlsButton" to="." method="_on_ControlsButton_pressed"]
[connection signal="toggled" from="SettingsMenu/Menu/SettingsContainer/VideoSettings/FullscreenCheckBox" to="." method="_on_FullscreenCheckBox_toggled"]
[connection signal="item_selected" from="SettingsMenu/Menu/SettingsContainer/VideoSettings/VideoOptionsButton" to="." method="_on_VideoOptionsButton_item_selected"]
[connection signal="item_selected" from="SettingsMenu/Menu/SettingsContainer/VideoSettings/VideoOptionsButton" to="." method="_on_VideoOptionButton_item_selected"]
[connection signal="pressed" from="SettingsMenu/Menu/SettingsContainer/VideoSettings/ApplyButton" to="." method="_on_ApplyButton_pressed"]
[connection signal="value_changed" from="SettingsMenu/Menu/SettingsContainer/AudioSettings/MasterSlider" to="." method="_on_MasterSlider_value_changed"]
[connection signal="value_changed" from="SettingsMenu/Menu/SettingsContainer/AudioSettings/BGMSlider" to="." method="_on_BGMSlider_value_changed"]
[connection signal="pressed" from="SettingsMenu/Menu/SettingsContainer/AudioSettings/BGMTestButton" to="." method="_on_BGMTestButton_pressed"]
[connection signal="value_changed" from="SettingsMenu/Menu/SettingsContainer/AudioSettings/SFXSlider" to="." method="_on_SFXSlider_value_changed"]
[connection signal="pressed" from="SettingsMenu/Menu/SettingsContainer/AudioSettings/SFXTestButton" to="." method="_on_SFXTestButton_pressed"]
[connection signal="pressed" from="SettingsMenu/CloseButton" to="." method="_on_CloseButton_pressed"]
